--- a/FamilyVideoChat/src/main/AndroidManifest.xml
+++ b/FamilyVideoChat/src/main/AndroidManifest.xml
@@ -8,29 +8,50 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
+
+    <uses-permission android:name="oicq.wlogin_sdk.permission.WloginProvider.READ" />
+    <uses-permission android:name="oicq.wlogin_sdk.permission.WloginProvider.WRITE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />     <!-- 发送短信-->
+    <uses-permission android:name="android.permission.READ_SMS" />     <!-- 读取短信 -->
+    <uses-permission android:name="android.permission.WRITE_SMS" />    <!-- 写入消息 -->
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />  <!-- 接收消息 -->
+
     <application
-        android:name="com.example.huangyouqiang.familyvideochat.ui.AndroidApplication"
+        android:name=".ui.AndroidApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.huangyouqiang.familyvideochat.ui.activity.LoginActivity"
+            android:name=".ui.activity.LoginActivity"
             android:label="@string/login"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name="com.example.huangyouqiang.familyvideochat.ui.activity.MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name="com.example.huangyouqiang.familyvideochat.ui.activity.RegisterActivity"
+            android:name=".ui.activity.RegisterActivity"
             android:label="@string/title_activity_register"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name="com.example.huangyouqiang.familyvideochat.ui.activity.SplashActivity"
+            android:name=".ui.activity.SplashActivity"
             android:label="@string/title_activity_splash"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -39,6 +60,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".avsdk.activity.AvActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <service
+            android:name=".service.StartContextService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
     </application>
 
 </manifest>
