--- a/FamilyVideoChat/build.gradle
+++ b/FamilyVideoChat/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:5.1.1'
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
