--- a/FamilyVideoChat/src/main/AndroidManifest.xml
+++ b/FamilyVideoChat/src/main/AndroidManifest.xml
@@ -7,32 +7,34 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.GET_TASKS" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-    <uses-permission android:name="android.permission.READ_LOGS" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.GET_TASKS"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.READ_LOGS"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
+    <uses-permission android:name="oicq.wlogin_sdk.permission.WloginProvider.READ"/>
+    <uses-permission android:name="oicq.wlogin_sdk.permission.WloginProvider.WRITE"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <!-- 发送短信 -->
+    <uses-permission android:name="android.permission.READ_SMS"/>
+    <!-- 读取短信 -->
+    <uses-permission android:name="android.permission.WRITE_SMS"/>
+    <!-- 写入消息 -->
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
 
-    <uses-permission android:name="oicq.wlogin_sdk.permission.WloginProvider.READ" />
-    <uses-permission android:name="oicq.wlogin_sdk.permission.WloginProvider.WRITE" />
-    <uses-permission android:name="android.permission.SEND_SMS" />     <!-- 发送短信-->
-    <uses-permission android:name="android.permission.READ_SMS" />     <!-- 读取短信 -->
-    <uses-permission android:name="android.permission.WRITE_SMS" />    <!-- 写入消息 -->
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />  <!-- 接收消息 -->
-
+    <!-- 接收消息 -->
     <application
         android:name=".ui.AndroidApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/snaker_launcher_96"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -64,11 +66,16 @@
             android:name=".avsdk.activity.AvActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
         <service
             android:name=".service.StartContextService"
             android:enabled="true"
             android:exported="true">
         </service>
+
+        <activity android:name=".ui.activity.AddFriendActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
